# secdevops-crews

./: .env.example  README.md  pyproject.toml
src/: main.py
src/crews/pr_security/: crew.py
src/crews/pr_security/config/: agents.yaml  tasks.yaml
src/shared/skills/code-review-orchestrator/: SKILL.md
src/shared/skills/code-standards-base/: SKILL.md
src/shared/skills/security-auditor/: SKILL.md
src/shared/tools/: __init__.py  file_reader.py  github_pr.py
